# F.CSA303_lab

lab01/cpp/: CMakeLists.txt  main.cpp
lab01/docs/: latex_test.tex
lab01/java/: pom.xml  run_tests.sh
lab01/java/src/main/java/com/lab01/: Main.java
lab01/java/src/test/java/com/lab01/: MainTest.java
lab01/python/tests/: test_main.py
lab01/scripts/: run_tests.sh  test_python.sh
